syntax = "proto3";

package votingpb;

service Voting {
    rpc CreatePoll(CreatePollRequest) returns (CreatePollReply) {}
    rpc Poll(PollRequest) returns (PollReply) {}
    rpc EndPoll(EndPollRequest) returns (EndPollReply) {}
    rpc Status(StatusRequest) returns (StatusReply) {}
    rpc CreateBallot(CreateBallotRequest) returns (CreateBallotReply) {}
    rpc Vote(VoteRequest) returns (VoteReply) {}
    rpc Count(CountRequest) returns (CountReply) {}
}

message CreatePollRequest {
    string creatorId = 1;
    string title = 2;
    int32 allowedUniqueVotes = 3;
    repeated Option options = 4;
}

message CreatePollReply {
    Poll poll = 1;
}

message Option {
    string id = 1;
    string pollId = 2;
    string content = 3;
}

message PollRequest {
    string id = 1;
}

message PollReply {
    Poll poll = 1;
}

message Poll {
    string id = 1;
    string title = 2;
    string creatorId = 3;
    int32 allowedUniqueVotes = 4;
    bool hasEnded = 5;
    repeated Option options = 6;
}

message OptionsRequest {
    string pollId = 1;
}

message OptionsReply {
    repeated Option options = 1;
}

message EndPollRequest {
    string id = 1;
    string userId = 2;
}

message EndPollReply {
    Poll poll = 1;
    bool success = 2;
    string reason = 3;
}

message StatusRequest {

}

message StatusReply {

}

message CreateBallotRequest {

}

message CreateBallotReply {

}

message VoteRequest {

}

message VoteReply {

}

message CountRequest {

}

message CountReply {

}
